# challenge_tflite

./: .gitignore  readme.md
Silent-Face-Anti-Spoofing/: generate_tflite_test_images.py  pytorch_to_tflite.py  requirements.txt  requirements_challenge.txt  test.py
assets/models/: 2.7_80x80_MiniFASNetV2.tflite
cmake/: generate_ar_input_file.cmake
src/: CMakeLists.txt  model.cpp  model.hpp
